Add benchmark run history
